--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.pit.qrcodesrajabrawijaya.activities.AboutActivity"
+            android:theme="@style/AppTheme2" />
+
     </application>
 
 </manifest>
