--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pit.qrcodesrajabrawijaya">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,6 +24,9 @@
         </activity>
         <activity
             android:name="com.pit.qrcodesrajabrawijaya.activities.AboutActivity"
+            android:theme="@style/AppTheme2" />
+        <activity
+            android:name="com.pit.qrcodesrajabrawijaya.activities.DataActivity"
             android:theme="@style/AppTheme2" />
 
     </application>
