--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+    mavenLocal()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
